# Memo

./: .gitignore  CMakeLists.txt  README.md  a.out  check_file_size.sh  gcc_compiled  main.cpp  memo.md  memories  memories.txt  repetition.md  t.txt  test.cpp  test.txt  vocab.txt  vocab_test.cpp
include/: coloring.hpp  memories.hpp  repetitions.hpp  search.hpp  string_utils.hpp  utils.hpp  vocablurary.hpp
include/levenshtain/: levenshtain.cpp  levenshtain.hpp
include/memory/: memory.cpp  memory.hpp
include/string_utils/: utils.hpp
include/vector_utils/: vectors.hpp
include/vocablurary/: vocablurary.cpp  vocablurary.hpp
src/: memories.cpp  repetitions.cpp  search.cpp  search.hpp  string_utils.cpp  utils.cpp  vocablurary.cpp
v1/: build.sh  main.cpp
v1/include/vocablurary/: vocablurary.hpp
v1/src/: search.cpp
